--- a/scene/one/elephant-conservation-angola/index.html
+++ b/scene/one/elephant-conservation-angola/index.html
@@ -36,8 +36,12 @@
 
   <section>
     <article>
-      <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.9.jpg" />
-      <p class="text-right gutter-side">&ldquo;A group of elephants in the Okavango Delta wades through water&hellip;&rdquo; Botswana &copy; Cory Richards [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
+
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.9.jpg" />
+        <p class="text-right gutter-side">&ldquo;A group of elephants in the Okavango Delta wades through water&hellip;&rdquo; Botswana &copy; Cory Richards [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
+
+      </div>
 
       <div>
         <h4 class="letterhead thin">December 2021</h4>
@@ -73,14 +77,14 @@
 
         <p class="linebreak">The team started at the source lakes and soon came upon a peatland, which Kerllen Costa describes in <em>Guardians of the River</em>, &ldquo;a marshy layer of decaying plants and mud.&rdquo; Kerllen continues &ldquo;And while satellite images can show the path of a river, nothing but dragging boats across boggy land exposes the landscape.&rdquo; The source lakes in Angola are the water tower for this system. These source lakes are surrounded by vast, high-altitude, high-rainfall Miombo woodlands and &ndash; in-between &ndash; there are sponge-like peatlands, with the whole system flowing into the river.</p>
 
-        <p class="linebreak lineend" id="steve-boyes-toggle">Hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
+        <p class="linebreak" id="steve-boyes-toggle">Hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
 
         <div class="clear indent-left-line" id="steve-boyes">
           <p class="linebreak"><font class="color"><em>Termites and mushrooms are the mechanics of the Okavango delta.</em></font></p>
 
           <p class="linebreak"><em>Termites have constructed millions of porous sand tunnels that fill with water when the delta floods, helping to expand, distribute and absorb the water. The termite mounds themselves also become islands, where sediments and nutrients collect, allowing the area to become a web of waterways, food, and shelter.</em> &mdash;&nbsp;<em>Guardians of the River</em> (2021)</p>
 
-          <div>
+          <div class="clear-bottom">
             <p>The water tower is basically a giant sand dune, with a forest on top, and a lot of rainfall. Doctor of Environmental Development, University of Natal, South Africa, and National Geographic Fellow&mdash;Steve Boyes submits, &ldquo;this is the only place in the world that you have this high-altitude sand hump that is acting like a mountain glacier.&rdquo; Termites are the bulk herbivore up there, and Dr Boyes reasons that they are taking the grass and woody matter underground, &ldquo;creating cavities to store water in, increasing the nutrient levels in the sand.&rdquo; When fires are set in natural cycles to fertilize the sandy soils, this combination produces nitrogen, which produces fungi that show on the surface of the forested dune. Steve sees the fungi, and hypothesizes there is a termite kingdom and giant mushroom under the sand, which acts as a sponge that is helping to slowly absorb and release water over time.</p>
 
             <p class="linebreak">Close hypothesis: <a class="color" onclick="toggle_steve_boyes();">Termites and mushrooms</a>.</p>
@@ -93,17 +97,14 @@
         <h4><font class="color text-quote">&ldquo;</font><em>These peat bogs hold as much as twenty-five times their own dry weight in water before slowly releasing it. [Dr Boyes and his crew] are literally walking on top of the sponge holding the water that eventually floods the Okavango delta.</em><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;<em>Into the Okavango</em> (documentary, 2018)</font></h4>
       </div>
 
-      <div>
-        <p>A peatland near the source waters was only the beginning.</p>
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.3.jpg" />
+        <p class="text-right gutter-side">&ldquo;A raging inferno swept across the floodplains opposite the overnight campsite on the Cuito River.&rdquo; Angola &copy; James Kydd [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
 
       </div>
 
-      <img alt="" src="../../../inc/img/01/photograph/ng/national-geographic-documentary-films.into-the-okavango.3.jpg" />
-      <p class="text-right gutter-side">&ldquo;A raging inferno swept across the floodplains opposite the overnight campsite on the Cuito River.&rdquo; Angola &copy; James Kydd [<a href="../../../url/-com/nationalgeographic-into-the-okavango/" target="_blank" title="National Geographic Documentary Films / Into the Okavango">films.nationalgeographic.com</a>]</p>
-
       <div>
-
-        <p class="linebreak">On that first documented expedition, the team found flames dancing across the peat, turning the land into charred, dried sand. Widespread human-set fires from hunting, slash-and-burn agriculture, and charcoal production now represent one of the greatest threats to the source waters. In the documentary <em>Into the Okavango</em> (2018), Dr Boyes describes trees escaping the fires, &rdquo;now growing into the river, choking it.&ldquo; The expedition found a renewed sense of urgency. There followed a number of wildlife surveys, and after engaging with communities along the river, Kerllen found a more powerful device for inspiring people to take action: <em>a story.</em></p>
+        <p><em>A peatland near the source waters was only the beginning.</em> On that first documented expedition, the team found flames dancing across the peat, turning the land into charred, dried sand. Widespread human-set fires from hunting, slash-and-burn agriculture, and charcoal production now represent one of the greatest threats to the source waters. In the documentary <em>Into the Okavango</em> (2018), Dr Boyes describes trees escaping the fires, &rdquo;now growing into the river, choking it.&ldquo; The expedition found a renewed sense of urgency. There followed a number of wildlife surveys, and after engaging with communities along the river, Kerllen found a more powerful device for inspiring people to take action: <em>a story.</em></p>
 
         <p class="linebreak">This is the story told in <em>Guardians of the River</em> (podcast, 2021). The podcast includes experts from the first expedition as well as the story behind the film, <em>Into the Okavango</em> (documentary, 2018). &ldquo;The prestige and attention of the documentary&rdquo;, Kerllen invokes in the podcast, &ldquo;transformed a ten-thousand dollar research expedition into a sixteen-million dollar, multinational conservation effort.&rdquo; National Geographic Society launched the Okavango Wilderness Project in 2017 in an effort to conserve the delta ecosystem. The project has become one of the top-most funded in the 150 year history at National Geographic Society.</p>
 
