--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -121,7 +121,7 @@
         <div class="clear ptych-right product-stock">
 
           <div>
-            <h4 class="in-stock"><font class="thin">Scheduled<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vue December 2024</font></font></h4>
+            <h4 class="in-stock"><font class="thin">December<font class="fr">&nbsp;&#92;&nbsp;D&eacute;cembre</font> 2024</font></h4>
             <h5 class="stock woo-article">Two editions available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Deux &eacute;ditions pr&ecirc;t &agrave; pr&eacute;commander.</font></h5>
 
             <h5 class="woo-article-title"><font class="title">White Elephant</font> <font class="small">E-book<font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></font></h5>
