--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -197,6 +197,12 @@
       </div>
 
       <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/ewb.landscape.1024-357.jpg" />
+        <p class="text-right gutter-side">Grey Frontiers &copy; Elephants Without Borders [<a href="../../../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">elephantswithoutborders.org</a>]</p>
+
+      </div>
+
+      <div class="clear">
 
         <div class="quote" id="footnotes">
           <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download PDF</a></p>
