--- a/scene/two/the-beginning-of-painting/index.html
+++ b/scene/two/the-beginning-of-painting/index.html
@@ -94,7 +94,7 @@
         <p class="linebreak">Consider blending colored crayons, or pencils, or pastels or gouaches and so on. A pure red and a pure yellow will blend into a range of oranges. A pure yellow and a pure blue will blend into a range of greens. A pure blue and a pure red will blend into a range of dark, neutral purples and violets. Oil colors will blend just the same. The reason is that these mediums have all been set with the same pigments. This color study has used only the three primary pigments, with white. This is an exercise of the range of a traditional primary color palette, painted with P&eacute;b&eacute;o oil colors on a 9 by 7 inch canvas board.</p>
       </div>
 
-      <img alt="Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White &copy; 2020 Dane Aleksander" src="../../../inc/img/oafa-02.color.red-yellow-blue.1280.jpg" />
+      <img alt="Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White &copy; 2020 Dane Aleksander" src="../../../inc/img/02/the-beginning-of-painting.study.red-yellow-blue.1280.jpg" />
       <p class="text-right gutter-side">Cadmium Red, Cadmium Yellow, Pthalo Blue, with Titanium White.</p>
 
       <div>
@@ -213,17 +213,17 @@
 
       <div class="clear triptych ptych-fixed">
         <div class="clear-left ptych-left">
-          <img alt="Gamblin Artist Oil Color &ndash; Quinacridone Magenta" src="../../../inc/img/oafa-02.the-beginning-of-painting.magenta.720.jpg" />
+          <img alt="Gamblin Artist Oil Color &ndash; Quinacridone Magenta" src="../../../inc/img/02/the-beginning-of-painting.magenta.720.jpg" />
 
         </div>
 
         <div class="clear-center ptych-center">
-          <img alt="Gamblin Artist Oil Color &ndash; Cadmium Lemon" src="../../../inc/img/oafa-02.the-beginning-of-painting.yellow.720.jpg" />
+          <img alt="Gamblin Artist Oil Color &ndash; Cadmium Lemon" src="../../../inc/img/02/the-beginning-of-painting.yellow.720.jpg" />
 
         </div>
 
         <div class="clear-right ptych-right">
-          <img alt="Gamblin Artist Oil Color &ndash; Cobalt Teal" src="../../../inc/img/oafa-02.the-beginning-of-painting.cyan.720.jpg" />
+          <img alt="Gamblin Artist Oil Color &ndash; Cobalt Teal" src="../../../inc/img/02/the-beginning-of-painting.cyan.720.jpg" />
 
         </div>
 
