--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -82,12 +82,9 @@
 
       <br>
 
-      <div class="desktop-feature">
-        <div class="clear ptych-center">
-          <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.color.nm.png" />
-          <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>]</p>
-
-        </div>
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.color.nm.png" />
+        <p class="text-right">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area">kavangozambezi.org</a>]</p>
 
       </div>
 
@@ -103,12 +100,6 @@
         <h4><font class="color">&ldquo;</font><em>Elephants are an umbrella species. They're ambassadors for conservation, helping to locate and connect key conservation areas in Africa's largest wilderness area.</em><font class="color">&rdquo;</font><font class="color thin"> &mdash;&nbsp;Kelly Landen. (2019) <em>The Last Elephants</em>, &lsquo;Botswana's sanctuary&rsquo; p. 225. Smithsonian Books</font></h4>
       </div>
 
-      <div class="clear">
-        <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.information.jpg" />
-        <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
-
-      </div>
-
       <div>
         <p>Elephant movements in (and out of) northern Botswana are long-range, temporally complicated, seasonally variable, and closely linked with rainfall.<sup>&nbsp;[<a class="button" onclick="fn();" title="Chase et al., 2005">3</a>]</sup></p>
 
@@ -116,7 +107,13 @@
 
         <p class="linebreak">This is where the Kavango-Zambezi Transfrontier Conservation Area initiative comes into the picture. KAZA is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders and covering the size of roughly France or Texas. The center of of the area is at the confluence of the Chobe and Zambezi rivers, where the borders of Botswana, Namibia, Zambia and Zimbabwe meet. Chobe National Park, Hwange National Park, the Okavango Delta and Victoria Falls are all contained within the Transfrontier Conservation Area. The vision: &lsquo;to establish a world-class transfrontier conservation and tourism destination in the Okavango and Zambezi river basin regions [&hellip;] within the context of sustainable development.&rsquo; The crux will be whether KAZA stakeholders have the political will to open up ancient elephant corridors to connect the elephants in Botswana to those well-stocked food pantries waiting for them to the north in Nambia, Zambia and Angola. If these corridors can be recreated, it will be a win-win situation for all member countries and their rural communities.</p>
 
-        <h3 class="linebreak">Botswana Without Borders</h3>
+      </div>
+
+      <img alt="" src="../../../inc/img/01/geo/kavango-zambezi.map.information.jpg" />
+      <p class="text-right gutter-side">Kavango-Zambezi [<a href="../../../url/-org/kavangozambezi-about/" rel="noopener" target="_blank" title="Kavango-Zambezi Transfrontier Conservation Area / Tourism Without Borders">kavangozambezi.org</a>, recolored]</p>
+
+      <div>
+        <h3>Botswana Without Borders</h3>
         <p>By 2007, Michael Chase and Kelly Landen had co-founded Elephants Without Borders (EWB) and managed nearly fifty fitted satellite collars on elephants in northern Botswana, Namibia and Zambia. In 2007, this was the largest telemetry study of elephants. These telemetry studies, coupled with population assessments and trends brought to light in the aerial surveys undertaken by EWB, were used to delineate the boundaries of the Kavango-Zambezi Transfrontier Conservation Area&mdash;the agreement under which Botswana, Namibia, Zambia, Zimbabwe and Angola formally acknowledged that wildlife conservation transcended national boundaries.</p>
 
         <p class="linebreak">By 2011, an aerial survey commissioned by the Botswana department of wildlife and national parks, conceptualized and led by Michael Chase and Kelly Landen of Elephants Without Borders, &ldquo;[made evident] a catastrophic loss of wildlife,&rdquo; according to Chase, eleven species were in serious decline in the delta. The declines were a result of a complex mix of local causes: human encroachment, game fences and poaching, fires and drought and so on. Elephants, however, were bucking the trend. Chase had an explanation:</p>
