--- a/scene/one/elephant-history/index.html
+++ b/scene/one/elephant-history/index.html
@@ -150,8 +150,11 @@
         </div>
       </div>
 
-      <img alt="" src="../../../inc/img/01/photograph/bbc.earths-greatest-spectacles.3.okavango.jpg" />
-      <p class="text-right gutter-side"><em>Earth's Greatest Spectacles</em> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
+      <div class="clear">
+        <img alt="" src="../../../inc/img/01/photograph/bbc.earths-greatest-spectacles.3.okavango.jpg" />
+        <p class="text-right gutter-side"><em>Earth's Greatest Spectacles</em> (2016), e/3: &ldquo;Okavango&rdquo; &copy BBC Studios Natural History Unit [<a title="BBC Studios Natural History Unit" href="../../../url/-com/bbcstudios-the-natural-history-unit/" target="_blank" rel="noopener">bbcstudios.com</a>]</p>
+
+      </div>
 
       <div>
         <p><em>The elephant &ndash; as a species &ndash; dates back to the Pliocene epoch, which means that the elephant has existed for more than ten times longer than the human temporal range. We have shared this world with elephants for as long as humans have existed. The wild elephant has a place in this world. Wild elephants must have space. We the people must preserve and protect the wild places and the animals that live in them.</em></p>
