--- a/scene/one/technology-ar/index.html
+++ b/scene/one/technology-ar/index.html
@@ -119,7 +119,7 @@
 
       <div class="clear navigation post-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../making-of-ella-1/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;1 /</font></a>
+          <a class="nav-previous" href="../making-of-ella/" rel="prev"><font class="mobile">Previous Article /</font><font class="desktop">Making of Ella Ch.&nbsp;1 /</font></a>
           <a class="nav-next" href="../elephant-conservation-africa/" rel="next"><font class="mobile">/ Next Article</font><font class="desktop">/ Elephant Conservation in Africa</font></a>
         </div>
       </div>
