--- a/scene/two/the-second-chapter/index.html
+++ b/scene/two/the-second-chapter/index.html
@@ -90,19 +90,19 @@
       <div class="clear polyptych">
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.green.1.png" />
+          <img alt="" src="../../../inc/img/02/wt.green.1.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.green.2.png" />
+          <img alt="" src="../../../inc/img/02/wt.green.2.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.green.3.png" />
+          <img alt="" src="../../../inc/img/02/wt.green.3.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.green.4.png" />
+          <img alt="" src="../../../inc/img/02/wt.green.4.png" />
         </div>
 
       </div>
@@ -120,19 +120,19 @@
       <div class="clear polyptych">
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.color.1.png" />
+          <img alt="" src="../../../inc/img/02/wt.color.1.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.color.2.png" />
+          <img alt="" src="../../../inc/img/02/wt.color.2.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.color.3.png" />
+          <img alt="" src="../../../inc/img/02/wt.color.3.png" />
         </div>
 
         <div>
-          <img alt="" src="../../../inc/img/02/color/wt.color.4.png" />
+          <img alt="" src="../../../inc/img/02/wt.color.4.png" />
         </div>
 
       </div>
