--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -233,6 +233,9 @@
     <article>
       <div class="project-broadcast quote">
 
+        <!-- <h3><a href="making-of-ella-4/"><font class="scene-one">Making of Ella Ch.&nbsp;4: Visual Effects</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre> -->
+
         <h3><a href="elephant-conservation-angola/"><font class="scene-one">Ghost Elephants in Angola</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
