--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -266,6 +266,9 @@
     <article>
       <div class="quote">
 
+        <h3><a href="the-beginning-of-exhibition/"><font class="scene-two">The Beginning of Exhibition</font><font class="desktop"> &#47; <em>Art</em></font></a></h3>
+        <pre class="thin"></pre>
+
         <h3><a href="the-forest-behind-the-trees/"><font class="scene-two">The Forest Behind the Trees</font><font class="desktop"> &#47; <em>Nature</em></font></a></h3>
         <pre class="thin"></pre>
 
