--- a/scene/one/elephant-conservation-kenya/index.html
+++ b/scene/one/elephant-conservation-kenya/index.html
@@ -122,7 +122,7 @@
 
       <div class="desktop-feature">
         <div class="clear ptych-center">
-          <img alt="" src="https://animathabitat.com/inc/img/~01/geo/hands-off.png" />
+          <img alt="" src="https://animathabitat.com/inc/img/~01/logo/hands-off.png" />
           <p class="text-right">Hands Off Our Elephants &copy; Wildlife Direct [<a href="../../../url/-org/wildlifedirect-hands-off-our-elephants/" rel="noopener" target="_blank" title="Wildlife Direct / Hands Off Our Elephants">wildlifedirect.org</a>, recolored]</p>
 
         </div>
