--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -59,7 +59,7 @@
 
         <div class="clear text-center">
           <div class="quote quarter">
-            <img alt="" src="https://animathabitat.com/inc/img/~01/geo/swt.1977.png" />
+            <img alt="" src="https://animathabitat.com/inc/img/~01/logo/swt.1977.png" />
           </div>
 
         </div>
