--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -114,7 +114,9 @@
       </div>
 
       <div>
-        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. They are the terminus of a thread that branched off millions of years ago.</p>
+        <p>Najin and Fatu are mother and daughter. It is no longer possible for the northern white rhinoceros to reproduce naturally. <em>They are the terminus of a lineage that split-off millions of years ago.</em></p>
+
+        <!-- E.O. Wilson, Journal: The Biological Diversity Crisis (1985) -->
 
         <p class="linebreak">Still some scientists have not given up. In August 2020 at Ol Pejeta Conservancy, African Wildlife Foundation funded a program by the Kenya Wildlife Service and scientists from Germany and the Czech Republic to collect eggs from these last two females. And so began an epiloge in the human story of the northern white rhinoceros. The aim is to rewrite the fate of the northern subspecies with a lot of help from the southern white rhinoceros and with a lot of time. Najin was retired from the program in 2021.<sup>&nbsp;[<a class="button" onclick="fn();" title="BBC Earth, 2019.">4,5</a>]</sup></p>
 
